--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@
   background-color: #fe0000;
 }
 .container-fluid {
-  padding-left: 15%;
-  padding-right: 15%;
+  padding-left: 20rem;
+  padding-right: 20rem;
 }
 
 .trade-winds-regular {
@@ -80,7 +80,6 @@
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
   }
   
   .btn:hover {
