--- a/css/store.css
+++ b/css/store.css
@@ -2,8 +2,8 @@
   background-color: #fe0000;
 }
 .container-fluid {
-  padding-left: 15%;
-  padding-right: 15%;
+  padding-left: 20rem;
+  padding-right: 20rem;
 }
 
 .trade-winds-regular {
