--- a/css/login.css
+++ b/css/login.css
@@ -143,19 +143,32 @@ body {
   background-color: #d32f2f;
 }
 
-
-.cent{
+.cent {
   text-align: center;
   font-size: 2.5rem;
 }
 
-.header-form{
+.header-form {
   font-size: 3rem;
   color: #f44336;
   font-weight: bolder;
 }
 
-.redd{
+.redd {
   background-color: #f44336;
   color: white;
+  width: 70%;
+}
+
+.form {
+  border: solid 1px black;
+  margin: 30px 0;
+  padding: 10px 10px;
+  box-shadow: 20px 20px 30px;
+  background-color: rgb(245, 234, 219);
+  border-radius: 9px;
+}
+
+.widt{
+  width: 40%;
 }
