--- a/css/signup.css
+++ b/css/signup.css
@@ -158,4 +158,24 @@ body {
 .redd{
   background-color: #f44336;
   color: white;
+  padding: 20px;
+  width: 40%;
+  margin-top: 20px;
+}
+
+.form {
+  border: solid 1px black;
+  margin: 30px 0;
+  padding: 10px 10px;
+  box-shadow: 20px 20px 30px;
+  background-color: rgb(245, 234, 219);
+  border-radius: 9px;
+  font-size: 2.5rem;
+}
+
+.widt{
+  width: 40%;
+}
+input{
+  margin-bottom: 20px;
 }
